          inside other contexts

13 Apr 2010 JK
        - Fixed bug in glbGetFilterInExperiment -- function returned
          only integer values

22 Apr 2010 JK
        - Regenerated all autoconf/automake, libtool, gnulib stuff using
          the latest versions of these packages:
            aclocal 1.11.1
            automake 1.11.1
            autoconf 2.65
            autoheader 2.65
            libtool 2.65
            gnulib-tool 0.0.3828-6d126
          The procedure is
            - Remove m4/ and lib/ directories
            - Run gnulib-tool --import obstack argp mkstemp
              (to get copy required modules from GNU library to our build tree)
            - Get rpm.m4, swig.m4, swig_perl.m4, gsl.m4 macros and copy
              to m4/
            - Run aclocal -I m4, autoconf, automake, autoheader
              (in this order)

23 Apr 2010 JK
        - Significant modifications to parser. Now accepts line breaks
          anywhere.

27 Apr 2010 JK
        - Implemented new function glbSetEnergyWindow

5 Jul 2010 JK
        - New functions glbSetCoefficientInRule

14 Sep 2010 JK
        - GLoBES now accepts cross section and flux files with an arbitrary number of
          lines

********** This version tagged 3.1.7 ************

25 Sep 2010 JK
        - Implemented a bunch of functions that allow the user to assign
          names to parameters, and then use these names in subsequent calls
          to glbSetOscParamByName, glbGetOscParamByName

26 Sep 2010 JK
        - New function glbGetFilenameOfExperiment
        - Changes to Lexer and parser:
          * New directive $citation
          * Strings (with double quotes '"') may now contain arbitrary characters,
            including line breaks. This was necessary to allow for multi-line
            citation information in glb files.
        - New function glbGetCitationForExperiment

********** This version tagged 3.1.8 ************
