@@ -61,6 +61,7 @@ package globes;
 *glbGetFilenameOfExperiment = *globesc::glbGetFilenameOfExperiment;
 *glbGetCitationForExperiment = *globesc::glbGetCitationForExperiment;
 *glbSetVerbosityLevel = *globesc::glbSetVerbosityLevel;
+*glbGetVerbosityLevel = *globesc::glbGetVerbosityLevel;
 *glbAllocParams = *globesc::glbAllocParams;
 *glbFreeParams = *globesc::glbFreeParams;
 *glbDefineParams = *globesc::glbDefineParams;
@@ -150,6 +151,7 @@ package globes;
 *glbGetChannelInRule = *globesc::glbGetChannelInRule;
 *glbGetCoefficientInRule = *globesc::glbGetCoefficientInRule;
 *glbSetCoefficientInRule = *globesc::glbSetCoefficientInRule;
+*glbGetChannelFlux = *globesc::glbGetChannelFlux;
 *glbGetNumberOfFluxes = *globesc::glbGetNumberOfFluxes;
 *glbFlux = *globesc::glbFlux;
 *glbXSection = *globesc::glbXSection;
